RESOLVED FIXED192320
REGRESSION (r238090): position:fixed sidebar on https://www.w3.org/TR/SVG2/coords.html does not stay fixed
https://bugs.webkit.org/show_bug.cgi?id=192320
Summary REGRESSION (r238090): position:fixed sidebar on https://www.w3.org/TR/SVG2/co...
Simon Fraser (smfr)
Reported 2018-12-03 13:31:28 PST
The position:fixed sidebar on https://www.w3.org/TR/SVG2/coords.html doesn't stay fixed; it scrolls, then snaps when you hover.
Attachments
Patch (7.05 KB, patch)
2018-12-03 18:17 PST, Simon Fraser (smfr)
no flags
Patch (7.05 KB, patch)
2018-12-03 19:18 PST, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2018-12-03 13:33:34 PST
Simon Fraser (smfr)
Comment 2 2018-12-03 15:03:50 PST
The page is using main thread scrolling (because of fixed backgrounds), and the compositing update pass is failing to update the positions of fixed elements.
Simon Fraser (smfr)
Comment 3 2018-12-03 18:17:21 PST
Simon Fraser (smfr)
Comment 4 2018-12-03 19:18:50 PST
alan
Comment 5 2018-12-03 19:22:13 PST
Comment on attachment 356448 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=356448&action=review > Source/WebCore/rendering/RenderLayerCompositor.cpp:669 > + bool isPageScroll = !updateRoot || updateRoot == &rootRenderLayer(); auto
WebKit Commit Bot
Comment 6 2018-12-03 20:03:56 PST
Comment on attachment 356448 [details] Patch Clearing flags on attachment: 356448 Committed r238840: <https://trac.webkit.org/changeset/238840>
WebKit Commit Bot
Comment 7 2018-12-03 20:03:58 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 9 2018-12-04 09:17:26 PST
Reverted r238840 for reason: The layout test added with this change is frequently failing. Committed r238855: <https://trac.webkit.org/changeset/238855>
Simon Fraser (smfr)
Comment 11 2018-12-04 18:19:17 PST
Relanded in https://trac.webkit.org/r238876 Attempted to de-flake the test in https://trac.webkit.org/r238883.
Note You need to log in before you can comment on or make changes to this bug.