REGRESSION (r238090): position:fixed sidebar on https://www.w3.org/TR/SVG2/coords.html does not stay fixed https://bugs.webkit.org/show_bug.cgi?id=192320 <rdar://problem/46429833>

Reviewed by Zalan Bujtas.
Source/WebCore:

Re-land r238840 with a more reliable test.

When we fall into slow scrolling mode (for example, because of background-attachment: fixed),
RenderLayerCompositor::updateCompositingLayers() needs to set the geometry dirty bit on layers
for viewport-constrained objects so we update them.

This is only necessary for page scrolling; for overflow scrolls, updateLayerPositions() already
does enough dirtying that fixed layers nested inside scrollers get updated.

Test: compositing/fixed-with-main-thread-scrolling.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateCompositingLayers):

LayoutTests:

* compositing/fixed-with-main-thread-scrolling-expected.html: Added.
* compositing/fixed-with-main-thread-scrolling.html: Added.
* platform/ios/TestExpectations:

Canonical link: https://commits.webkit.org/207012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238876 268f45cc-cd09-0410-ab3c-d52691b4dbfc